Fixed #723: schema error popup not always fully visible

--- a/src/scss/jsoneditor.scss
+++ b/src/scss/jsoneditor.scss
@@ -82,6 +82,8 @@ div {
     }
     div {
       &.jsoneditor-anchor {
+        cursor: pointer;
+
         .picker_wrapper {
           &.popup {
             &.popup_bottom {
@@ -370,12 +372,14 @@ div.jsoneditor-value,
 div.jsoneditor td,
 div.jsoneditor th,
 div.jsoneditor textarea,
-div.jsoneditor pre.jsoneditor-preview,
-div.jsoneditor .jsoneditor-schema-error {
+pre.jsoneditor-preview,
+.jsoneditor-schema-error,
+.jsoneditor-popover{
   font-family: $jse-font-mono;
   font-size:  $jse-font-size;
   color: $jse-content-color;
 }
+
 .jsoneditor-schema-error {
   cursor: default;
   display: inline-block;
@@ -384,74 +388,76 @@ div.jsoneditor .jsoneditor-schema-error {
   position: relative;
   text-align: center;
   width: 24px;
-  .jsoneditor-popover {
-    background-color: $jse-popover-bg;
-    border-radius: 3px;
-    box-shadow: $jse-box-shadow-sm;
-    color: $jse-white;
-    display: none;
-    padding: 7px 10px;
-    position: absolute;
-    width: 200px;
-    z-index: 4;
-    &.jsoneditor-above {
-      bottom: 32px;
-      left: -98px;
-      &:before {
-        border-top: 7px solid $jse-popover-bg;
-        bottom: -7px;
-      }
-    }
-    &.jsoneditor-below {
-      top: 32px;
-      left: -98px;
-      &:before {
-        border-bottom: 7px solid $jse-popover-bg;
-        top: -7px;
-      }
-    }
-    &.jsoneditor-left {
-      top: -7px;
-      right: 32px;
-      &:before {
-        border-left: 7px solid $jse-popover-bg;
-        border-top: 7px solid transparent;
-        border-bottom: 7px solid transparent;
-        content: "";
-        top: 19px;
-        right: -14px;
-        left: inherit;
-        margin-left: inherit;
-        margin-top: -7px;
-        position: absolute;
-      }
-    }
-    &.jsoneditor-right {
-      top: -7px;
-      left: 32px;
-      &:before {
-        border-right: 7px solid $jse-popover-bg;
-        border-top: 7px solid transparent;
-        border-bottom: 7px solid transparent;
-        content: "";
-        top: 19px;
-        left: -14px;
-        margin-left: inherit;
-        margin-top: -7px;
-        position: absolute;
-      }
-    }
+}
+
+.jsoneditor-popover {
+  background-color: $jse-popover-bg;
+  border-radius: 3px;
+  box-shadow: $jse-box-shadow-sm;
+  color: $jse-white;
+  padding: 7px 10px;
+  position: absolute;
+  cursor: auto;
+  width: 200px;
+  z-index: 999;
+  &.jsoneditor-above {
+    bottom: 32px;
+    left: -98px;
     &:before {
-      border-right: 7px solid transparent;
-      border-left: 7px solid transparent;
+      border-top: 7px solid $jse-popover-bg;
+      bottom: -7px;
+    }
+  }
+  &.jsoneditor-below {
+    top: 32px;
+    left: -98px;
+    &:before {
+      border-bottom: 7px solid $jse-popover-bg;
+      top: -7px;
+    }
+  }
+  &.jsoneditor-left {
+    top: -7px;
+    right: 32px;
+    &:before {
+      border-left: 7px solid $jse-popover-bg;
+      border-top: 7px solid transparent;
+      border-bottom: 7px solid transparent;
       content: "";
-      display: block;
-      left: 50%;
-      margin-left: -7px;
+      top: 19px;
+      right: -14px;
+      left: inherit;
+      margin-left: inherit;
+      margin-top: -7px;
       position: absolute;
     }
   }
+  &.jsoneditor-right {
+    top: -7px;
+    left: 32px;
+    &:before {
+      border-right: 7px solid $jse-popover-bg;
+      border-top: 7px solid transparent;
+      border-bottom: 7px solid transparent;
+      content: "";
+      top: 19px;
+      left: -14px;
+      margin-left: inherit;
+      margin-top: -7px;
+      position: absolute;
+    }
+  }
+  &:before {
+    border-right: 7px solid transparent;
+    border-left: 7px solid transparent;
+    content: "";
+    display: block;
+    left: 50%;
+    margin-left: -7px;
+    position: absolute;
+  }
 }
+
 .jsoneditor-text-errors {
   tr {
     &.jump-to-line {
